Day 4 - implement solution