@@ -3,6 +3,7 @@ package org.dahoppe.aoc.util;
 import java.util.Arrays;
 import java.util.List;
 import java.util.function.Function;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class Parsing {
@@ -22,7 +23,7 @@ public class Parsing {
     public static <T> List<T> parseLineByLine(String input, Function<String, T> parseLine) {
         return splitOnNewLine(input)
                 .map(parseLine)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public static List<Integer> treatAsUnseparatedIntegers(String input) {
